[project]
name = "ggee"
version = "0.0.1a"
description = "A Python package for Google Earth Engine Tools"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["google earth engine", "geospatial", "data analysis"]
authors = [{name = "Thai Tran", email = "ThaiTran@outlook.com"}]
maintainers = [{name = "Thai Tran", email = "ThaiTran@outlook.com"}]


[project.urls]
"Homepage" = "https://github.com/tnmthai/ggee"
"Bug Reports" = "https://github.com/tnmthai/ggee/issues"
"Funding" = "https://donate.pypi.org"
"Source" = "https://github.com/tnmthai/ggee"

[tool.setuptools]
package-data = {"ggee" = ["data/*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
