[metadata]
name = tgis
version = 0.0.1
author = Thai Tran
author_email = thaitran@outlook.com
description = Google Earthe Engine Tools
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/tnmthai/tgis
project_urls =
    Bug Tracker = https://github.com/tnmthai/tgis/issues
    repository = https://github.com/tnmthai/tgis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tgis
packages = find:
python_requires = >=3.6

[options.packages.find]
where = tgis